--- a/practical/practical.qmd
+++ b/practical/practical.qmd
@@ -171,10 +171,10 @@ ii. Give it an appropriate name (e.g., `euros-prediction`).
 
 Click the links below to download the required scripts and dataset:
 
-* `01-clean.R`
-* `02-analysis.R`
-* `03-plot.R`
-* `fixtures.csv`
+* [`01-clean.R`](practical/2-scripts/01-clean.R)
+* [`02-analysis.R`](practical/2-scripts/02-analysis.R)
+* [`03-plot.R`](practical/2-scripts/03-plot.R)
+* [`fixtures.csv`](practical/1-data/raw/fixtures.csv)
 
 Put these inside your project folder and recreate the structure shown below:
 
