--- a/practical/practical.qmd
+++ b/practical/practical.qmd
@@ -19,12 +19,6 @@ format:
     embed-resources: true
 ---
 
-```{r}
-#| echo: false
-team <- "England"
-```
-
-
 <div style="
   background-color: #fdf0d5;
   border-left: 6px solid #780000;
@@ -171,12 +165,17 @@ ii. Give it an appropriate name (e.g., `euros-prediction`).
 
 Click the links below to download the required scripts and dataset:
 
-* [`01-clean.R`](practical/2-scripts/01-clean.R)
-* [`02-analysis.R`](practical/2-scripts/02-analysis.R)
-* [`03-plot.R`](practical/2-scripts/03-plot.R)
-* [`fixtures.csv`](practical/1-data/raw/fixtures.csv)
+* [`01-clean.R`][clean]
+* [`02-analysis.R`][analysis]
+* [`03-plot.R`][plot]
+* [`fixtures.csv`][fixtures]
 
 Put these inside your project folder and recreate the structure shown below:
+
+[clean]: https://github.com/ewancarr/reproducible-r/raw/32c5193f823d03da27e59345169da15c68e12036/practical/2-scripts/01-clean.R
+[analysis]: https://github.com/ewancarr/reproducible-r/raw/refs/heads/main/practical/2-scripts/02-analysis.R
+[plot]: https://github.com/ewancarr/reproducible-r/raw/refs/heads/main/practical/2-scripts/03-plot.R
+[fixtures]: https://raw.githubusercontent.com/ewancarr/reproducible-r/refs/heads/main/practical/1-data/raw/fixtures.csv
 
 ```text
 scripts/
