--- a/practical/practical.qmd
+++ b/practical/practical.qmd
@@ -177,14 +177,14 @@ Put these inside your project folder and recreate the structure shown below:
 [fixtures]: https://raw.githubusercontent.com/ewancarr/reproducible-r/refs/heads/main/practical/1-data/raw/fixtures.csv
 
 ```text
-scripts/
-├── 01-clean.R
-├── 02-analysis.R
-└── 03-plot.R
-data/
+1-data/
 ├── raw/
 │   └── fixtures.csv
 └── clean/
+2-scripts/
+├── 01-clean.R
+├── 02-analysis.R
+└── 03-plot.R
 outputs/
 ```
 
